// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Profile > matches snapshot in en 1`] = `
<div
  class="page profile"
  data-centered="false"
>
  <div
    class="page-header"
  >
    <div
      class="page-title-wrapper"
    >
      <div
        class="title"
      >
        <h1>
          Profile
        </h1>
        
        <!---->
        
      </div>
      
      <!---->
      
    </div>
    <div
      class="page-toolbar"
    >
      
      
    </div>
  </div>
  <div
    class="page-content"
  >
    
    <account-info-stub />
    <profile-form-stub />
    
    <!---->
  </div>
</div>
`;

exports[`Profile > matches snapshot in fr 1`] = `
<div
  class="page profile"
  data-centered="false"
>
  <div
    class="page-header"
  >
    <div
      class="page-title-wrapper"
    >
      <div
        class="title"
      >
        <h1>
          Profil
        </h1>
        
        <!---->
        
      </div>
      
      <!---->
      
    </div>
    <div
      class="page-toolbar"
    >
      
      
    </div>
  </div>
  <div
    class="page-content"
  >
    
    <account-info-stub />
    <profile-form-stub />
    
    <!---->
  </div>
</div>
`;
